resolved cta header + update spacing

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -82,7 +82,6 @@ body {
   a:visited {
     text-decoration: none;
     list-style: none;
-    // color: inherit;
   }
   li {
     list-style-type: none;
@@ -110,9 +109,6 @@ body:not(.container-md) {
   background-color: #ffffff;
 }
 
-section {
-  padding-bottom: 2rem;
-}
 ///////////////////////////////
 /// NAVBAR
 ///////////////////////////////
@@ -274,8 +270,8 @@ footer .footer-brand {
 
 .hero {
   position: relative;
-  margin-top: 5rem;
   height: 88vh;
+  margin-top: 15rem;
   &__img {
     width: 100%;
     height: 100%;
@@ -306,20 +302,19 @@ footer .footer-brand {
     }
     .hero__body {
       font-size: 1rem;
-      font-weight: regular;
-      padding-bottom: 1rem;
+      // font-weight: regular;
+      // padding-bottom: 1rem;
       max-width: 40ch;
     }
     .hero__cta {
-      font-weight: bold;
       color: $clr-blue;
       background-color: $clr-yellow;
       font-size: 1rem;
       max-width: 15rem;
-      padding: 0.69rem 0.23rem;
-      border-radius: 0.4rem;
-      border: none;
-      box-shadow: 3px 3px 3px $clr-blue;
+      box-shadow: $shadow;
+      &:hover {
+        box-shadow: inset $shadow;
+      }
     }
   }
 }
